# ow

./: .gitignore  Makefile.am  configure.ac
.devcontainer/: devcontainer.json
debian/: README.Debian  changelog  control  copyright
man/: Makefile.am  ow.1
po/: POTFILES.in  ja.po  ow.pot
src/: Makefile.am  overwriter.c  ow.c
